# sage

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
CMake/Modules/: ImportedTarget.cmake  PlatformDefinitions.cmake
Source/: CMakeLists.txt  Launch.cpp
Source/Sage/: BasicTypes.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Exports.hpp  Run.cpp  Run.hpp  Timer.cpp  Timer.hpp
Source/Sage/Console/: CMakeLists.txt  CVar.cpp  CVar.hpp  CVarManager.cpp  CVarManager.hpp  Log.cpp  Log.hpp  VirtualConsole.cpp  VirtualConsole.hpp
Source/Sage/Console/Internal/: FileIOCallbacksSDL.hpp
Source/Sage/Core/: BasicTypes.hpp  CMakeLists.txt  ClassDefinitions.hpp  Context.cpp  Context.hpp  Engine.cpp  Engine.hpp  Exports.cpp  Exports.hpp  Run.cpp  Run.hpp  SDL.cpp  SDL.hpp  Timer.cpp  Timer.hpp
Source/Sage/Core/Console/: CMakeLists.txt  CVar.cpp  CVar.hpp  CVarManager.cpp  CVarManager.hpp  Log.cpp  Log.hpp  VirtualConsole.cpp  VirtualConsole.hpp
Source/Sage/Core/Graphics/: CMakeLists.txt  GraphicsCVars.cpp  GraphicsCVars.hpp  GraphicsContext.cpp  GraphicsContext.hpp  RenderTarget.hpp  RenderView.hpp  SwapChain.hpp  Window.cpp  Window.hpp
Source/Sage/Core/Graphics/ImGui/: CMakeLists.txt  ImGuiContext.cpp  ImGuiContext.hpp  ImGuiInterface.cpp  ImGuiInterface.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
Source/Sage/Core/Graphics/ImGui/Internal/: KeycodeToImGuiKey.hpp
Source/Sage/Core/Graphics/Internal/: AddContextCreateInfo.hpp  DiligentDebugCallback.hpp  Enumerate.hpp  GetNativeWindow.hpp  GraphicsContextImpl.hpp  ModifyCreateInfo.hpp
Source/Sage/Core/Graphics/RmlUi/: RmlUiRenderer.hpp
Source/Sage/Core/IO/: CMakeLists.txt  Path.cpp  Path.hpp
Source/Sage/Core/IO/Internal/: FileIOCallbacksSDL.hpp
Source/Sage/Core/Input/: CMakeLists.txt
Source/Sage/Graphics/: GraphicsCVars.hpp  GraphicsContext.cpp  GraphicsContext.hpp
Source/Sage/Graphics/ImGui/: CMakeLists.txt  ImGuiContext.cpp  ImGuiContext.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
Source/Sage/Graphics/RmlUi/: RmlUiRenderer.hpp
Source/Sage/IO/: CMakeLists.txt  Path.cpp  Path.hpp
Source/Sage/Input/: CMakeLists.txt
Source/Sage/Launch/: CMakeLists.txt  Main.cpp
